# secondhand-book-on-solana

./: .gitignore  Cargo.toml  README.md  package.json
book_server/: Cargo.toml
book_server/.sqlx/: query-09ee6ff4f92a88fefadd4a39b029c6374eda78b8adc1d8d6b82a24faef6878cb.json  query-136548067bfb331534afa1c1ce9e20cf9c3d490d165e70a43a8a0d314c58ba16.json  query-1b0dea76f967b8e8bf1e33de23380fe494e432abe3a7e11a588f403dac5f57d0.json  query-1e097a9e734d0cdd1dfc09794172cf19e336ef8e3fb51e845c55c8b1c0c0c7be.json  query-24ec3e6dff4da47d7584e6570ca0507f3c4327b3a2e452938b753f62253661a8.json  query-32cd6448a3e435872519ad4634b366e0ddd386f756a20fd218313b8908130af4.json  query-3c795f4f19bf7851eb74af1e87f45d7eec0f3280e394a3ef08210c9a7bfa8030.json  query-3e5fec3e47d31c3e3f6c17c658bd70d5e8a31660310bf1c3a6935e96e653d3cc.json  query-44926aac4227488602c9b694dd24639378c1467eec0595ba64c4cbdac6c3bf52.json  query-526ebb09896a92f68616c223259940ee26f39674ffd1a931a67360fd13321308.json  query-55366977b101b68f312195e3af528ae0e4240dae75339e8272075b219cd30302.json  query-60034ea4df42b9e982cf4832e6b36fa4098e0f160386b35571e560e553fa08e6.json  query-61f64ecbb1026c317efe76155b76fec449cf554d02d91ae8741268c1cc0dec67.json  query-673053d2c159fd64028d1de46f5168b99d5e59c4919b63843b4d7de5ac6f2ec4.json  query-7243c9151ce7bf4e908aa5d25b1213051aa239dcaae0a1a06e8efc03d98ad3dc.json  query-73eeeddf9a536ad1f0bee17b3e04959b497ac2809197981041f62372819102e7.json  query-7682f8b194b53fdc4a8a2e5eda6552927f95e56c9f0fb110f84eea3123f2874f.json  query-79c7390ac18ae9dce4ab6715e5937b85996d4aea89fa21ece17c9c8240a19f23.json  query-7d5d1c8b28d298292f4c94865ce2c56d29fbb32ec6ce2b91b3aabb1591fb00ba.json  query-855c0dfd7d3ef1fce44c5e369982966e1c51181b321593ca41c89c20786a870c.json  query-898f2ff67c6d55f7610e5a11591d5da8b79309bca664782655984aaec61dd899.json  query-9f0c1395240803de56a1f22bd30d7ceda6aae1c7189e30b36b081cf10b45c6f8.json  query-a436ca02fb6e6ae0841ce15d6ea3cb8a3f5ecc52921a6fc4da642693f3361b64.json  query-a4d8f50658133ecb43a92e1dc609ae6f7a0251e56852a7887ad78092fc22268f.json  query-c994680920d50bee247955d039d6ad28a08fcce98a98c42d37da090d634f4c6b.json  query-cb6392972cd7ef09773d891a3bf44e23d55ba45da3d9fb5bc4d6e51d9d8e1414.json  query-ea78dc765411d80df07491c3e130c01f1799c8e8b6b71bd37498fae50152117a.json  query-f9136cd76855c603944d6c0a81aaece58da4d8b55e2f18d1acc52172ec48e249.json
book_server/idls/: book.json
book_server/migrate/: 0001_init.sql
book_server/migrations/: 0001_init.sql  0002_book_categories.sql  0003_book_conditions.sql  0004_chain_sync.sql  0005_book_price_fiat.sql  0006_encryption_backup.sql  0007_user_encryption_pubkey.sql  0008_escrow_shipping_cipher.sql  0009_user_shipping_addresses.sql  0010_user_shipping_addresses_cipher.sql  0011_drop_plain_user_shipping_addresses.sql  0012_escrows_cancelled_by.sql  0013_escrows_trade_count_applied.sql  0014_escrow_events.sql  0015_book_events.sql  0016_backfill_book_created_events.sql  0017_escrows_book_snapshot.sql  0018_escrow_tracking_cipher.sql  0019_user_reputation.sql  0020_escrows_pre_ship_lock.sql  0021_escrow_dispute_submissions.sql  0022_escrow_dispute_submissions_per_party.sql  0023_disputed_at_and_dispute_revisions.sql  0024_user_username_edit_quota.sql  0025_escrow_events_payload.sql
book_server/scripts/: schema_full.sql  seed_market_demo.sql
book_server/src/: arbitration.rs  config.rs  error.rs  event_listener.rs  lib.rs  main.rs  state.rs
book_server/src/auth/: error.rs  handler.rs  middler.rs  mod.rs  service.rs  types.rs  util.rs
book_server/src/chat/: connection.rs  error.rs  handler.rs  mod.rs  service.rs  types.rs  util.rs
book_server/src/client/: error.rs  handler.rs  mod.rs  service.rs  types.rs  utils.rs
book_server/src/client/handlers/: book_handlers.rs  escrow_handlers.rs  mod.rs
book_server/src/client/service/: book_broadcast.rs  book_build.rs  common.rs  escrow_broadcast.rs  escrow_build.rs  escrow_event_log.rs  mod.rs
book_server/src/client/types/: anchor_service.rs  broadcast.rs  mod.rs  requests.rs  responses.rs
book_server/src/client/utils/: media.rs  mod.rs  multipart.rs  number.rs  pinata.rs  tx.rs
book_server/src/crypto/: mod.rs
book_server/src/db/: book.rs  book_event.rs  dispute_submission.rs  encryption.rs  escrow.rs  escrow_event.rs  favorite.rs  message.rs  mod.rs  review.rs  shipping_address.rs  shipping_cipher.rs  sync.rs  tracking_cipher.rs  types.rs  user.rs
book_server/src/db/book/: service.rs  types.rs
book_server/src/db/escrow/: service.rs  types.rs
book_server/src/db/review/: service.rs  types.rs
book_server/src/db/user/: service.rs  types.rs
book_server/src/google_books/: error.rs  handler.rs  mod.rs  parse.rs  service.rs  types.rs
book_server/src/handlers/: auth.rs  book.rs  chat.rs  encryption.rs  error.rs  google_books.rs  me.rs  mod.rs  stats.rs  transactions.rs  user.rs  ws_handler.rs
book_server/src/infra/: env.rs  fx_rate.rs  http.rs  mod.rs  qiniu_upload.rs  rate_limit.rs
book_server/src/middlewares/: auth.rs
book_server/src/query/: error.rs  mod.rs  types.rs
book_server/src/reconcile/: book_mirror.rs  common.rs  dispute_listener.rs  dispute_outcome.rs  escrow_mirror.rs  mod.rs  tick.rs
book_server/src/routers/: mod.rs  protected.rs  public.rs
book_server/src/services/: auth.rs  chat.rs  chat_service.rs  mod.rs
book_server/src/types/: chat.rs  client.rs  mod.rs
book_server/src/utils/: auth_utils.rs  mod.rs  pubkey_serde.rs
serve/: Cargo.toml
shared/idls/: book.json
