
[workspace]
members = [
    "book_server",
    "packages/book/programs/*"
]

resolver = "2"
[workspace.dependencies]
#后端
tokio = {version = "1.51.1",features = ["full"]}
axum = {version = "0.8.8",features = ["tokio","ws"]}
sqlx={version = "0.8.6",features = ["runtime-tokio","postgres"]}
dashmap = "6.1.0"
anchor-client = {version = "1.0.0",features = ["async"]}
serde = "1.0.228"
bincode = "1.3.3"#之后的版本不好用
serde_json = "1.0.149"
tracing-subscriber = "0.3.23"
dotenvy="0.15.7"
solana-system-interface = "3.2.0"
sonyflake="0.4.0"
thiserror="2.0.18"
anyhow = "1.0.102"
futures = "0.3.32"
log = "0.4.29"
jsonwebtoken ="10.3.0"
chrono = "0.4.44"
ed25519-dalek = "2.2.0"
bs58 = "0.5.1"
#验证生成和验证HMAC
hmac = "0.13.0"
sha2 = "0.11.0"



tower-http = { version = "0.6.8", features = ["cors"] }
#链上程序
anchor-lang = "1.0.0"

#共享
solana-sdk = "4.0.1"



[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[toolchain]
channel = "1.89.0"
components = ["rustfmt","clippy"]
profile = "minimal"
