
[workspace]
members = [
    "book_server",
    "packages/book/programs/*"
]

resolver = "2"
[workspace.dependencies]
#后端
tokio = {version = "1.51.1",features = ["full"]}
axum = {version = "0.8.8",features = ["tokio","ws",]}
axum-extra = {version = "0.12.6",features = ["cookie"]}
sqlx={version = "0.8.6",features = ["runtime-tokio","postgres"]}
dashmap = "6.1.0"
time="0.3.47"
anchor-client = {version = "1.0.0",features = ["async"]}
serde = "1.0.228"
bincode = "1.3.3"#之后的版本不好用
serde_json = "1.0.149"
tracing-subscriber = "0.3.23"
dotenvy="0.15.7"
solana-system-interface = "3.2.0"
sonyflake="0.4.0"
thiserror="2.0.18"
anyhow = "1.0.102"
futures = "0.3.32"
log = "0.4.29"
jsonwebtoken ={version = "10.3.0",features = ["rust_crypto"]}#指定采用的加密
chrono = "0.4.44"
ed25519-dalek = "2.2.0"
bs58 = "0.5.1"
base64 = "0.22.1"
#验证生成和验证HMAC
hmac = "0.13.0"
sha2 = "0.11.0"
deadpool-redis = "0.23.0"

redis={version = "1.2.0",features = ["tokio-comp"]}
tower-http = { version = "0.6.8", features = ["cors"] }
#链上程序
anchor-lang = { version = "0.31.1" }
#共享
solana-sdk = "3.0.0"
mpl-core = { version = "0.11.2",features = ["anchor"],default-features = false }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[toolchain]
channel = "1.89.0"
components = ["rustfmt","clippy"]
profile = "minimal"
