[package]
name = "book_server"
version = "0.4.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
tokio = {workspace = true}
axum ={workspace = true}
axum-extra = {workspace = true}
time = {workspace = true}
sqlx={workspace = true}
dashmap = {workspace = true}
anchor-client = {workspace = true}
serde = {workspace = true}
bincode ={workspace = true}
serde_json ={workspace = true}
tracing-subscriber = {workspace = true}
dotenvy={workspace = true}
solana-system-interface = {workspace = true}
sonyflake={workspace = true}
tracing = {workspace = true}
thiserror = {workspace = true}
anyhow = {workspace = true}
futures = {workspace = true}
tower-http = {workspace = true}
jsonwebtoken ={workspace = true}
chrono = {workspace = true}
ed25519-dalek = {workspace = true}
bs58 = {workspace = true }
hmac = {workspace = true}
sha2 = {workspace = true}
redis={workspace = true}
deadpool-redis = {workspace = true}
base64 = {workspace = true}
mpl-core = {workspace = true}
anchor-lang = {workspace = true,features = ["derive"]}
reqwest={workspace = true}
uuid = { workspace = true }